# arxiv-newpaper-notifier

./: .env.template  .gitignore  LICENSE  README.md  block.py  const.py  fetch_paper_info.py  llms.py  pyproject.toml  requirements.txt  send_to_slack.py  utils.py
