[project]
name = "arxiv-newpaper-notifier"
version = "0.1.0"
description = "collect the latest paper information from arXiv and post it to Slack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "huggingface-hub>=0.31.2",
    "llama-cpp-python>=0.3.9",
    "pillow>=11.2.1",
    "pydantic>=2.11.4",
    "pymupdf>=1.25.5",
    "python-dotenv>=1.1.0",
    "slack-sdk>=3.35.0",
]
