[project]
name = "arxiv-newpaper-notifier"
version = "0.1.0"
description = "Slack Bot that sends notification of the latest papers published on arXiv."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "beautifulsoup4>=4.13.4",
    "duckduckgo-search>=8.0.2",
    "fake-useragent>=2.2.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.8",
    "pillow>=11.2.1",
    "pydantic>=2.11.5",
    "pymupdf>=1.26.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "slack-sdk>=3.35.0",
]

[dependency-groups]
dev = ["ruff>=0.11.12"]
